# ocr_infer

./: .gitignore  CMakeLists.txt  Dockerfile  README.en.md  README.md
eval_acc/: README.md  convert.py  eval_end2end_v1.py  eval_end2end_v2.py  jan2fan.py
example/: CMakeLists.txt  README.md
example/ocr_infer/include/: data_type.h  ocr_api.h
example/ocr_infer/include/ocr_infer/: data_type.h  ocr_api.h
example/ocr_infer/lib/: README.md
example/src/: main.cc
ocr_infer/: CMakeLists.txt
ocr_infer/api/: data_type.h  ocr_api.cc  ocr_api.h
ocr_infer/core/: CMakeLists.txt
ocr_infer/core/common/: data_structure.h  transmission.h
ocr_infer/core/match/: CMakeLists.txt  matcher_base.h  matcher_engine.cc  matcher_engine.h  rule_tree.h  temp.cc
ocr_infer/core/match/ac/: ac_matcher.cc  ac_matcher.h
ocr_infer/core/match/fuzzy/: fuzzy_matcher.cc  fuzzy_matcher.h
ocr_infer/core/model/: CMakeLists.txt  model_base.h
ocr_infer/core/model/detect/: db.cc  db.h  db_pp.cc  db_pp.h
ocr_infer/core/model/recognize/: crnn.cc  crnn.h
ocr_infer/core/node_core/: CMakeLists.txt  buffer_core.cc  buffer_core.h  clip_core.cc  clip_core.h  core_base.h  detect_core.cc  detect_core.h  detect_postprocessing_core.cc  detect_postprocessing_core.h  gather_core.cc  gather_core.h  match_core.cc  match_core.h  node.h  recognize_core.cc  recognize_core.h
ocr_infer/core/pipeline/: CMakeLists.txt  parallel_pipeline.cc  parallel_pipeline.h  pipeline.cc  pipeline.h  serial_pipeline.cc  serial_pipeline.h
ocr_infer/core/util/: CMakeLists.txt  clipper.hpp  code_convert.h  code_convert_test.cc  config_util.h  file_handle.cc  file_handle.h  file_handle_test.cc
ocr_infer/engines/: CMakeLists.txt  parallel_engine.cc  parallel_engine.h  parallel_engine_test.cc  serial_engine.cc  serial_engine.h  serial_engine_test.cc
ocr_infer/eval/: CMakeLists.txt  eval_acc.h  eval_acc_test.cc  eval_parallel_acc.h  eval_parallel_acc_test.cc  eval_parallel_speed.h  eval_parallel_speed_test.cc  eval_serial_acc.h  eval_serial_acc_test.cc  eval_serial_speed.h  eval_serial_speed_test.cc  eval_speed.h  eval_speed_test.cc  main.cc  test_speed.h
ocr_infer/test/: config_cnc.ini  main.cc  test_speed.h
ocr_infer/test/util/: read_config.h  syscall.h  timer.h
ocr_infer/util/: config_util.h  image_util.h  init.h  read_config.h  syscall.h  timer.h
quantify/: README.md  requirements.txt
quantify/detect/cpp_infer/: CMakeLists.txt  README.md  db.cc  db.h  db_pp.cc  db_pp.h  drawer.h  eval_detect.py  main.cc
quantify/detect/py_infer/: DB_model_mobilenet.py  DB_model_resnet.py  DB_postprocess.py  README.md  eval_detect.py  inference.py  resnet.py  save_onnx.py  util.py
quantify/recognize/cpp_infer/: CMakeLists.txt  README.md  crnn.cc  crnn.h  eval_rec.py  main.cc
quantify/recognize/py_infer/: README.md  crnn.py  inference.py  save_onnx.py
quantify/trt_quan/: README.md  build.sh  nvinfer.cc
